--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -36,6 +36,7 @@
   border-radius: 8px;
   width: calc(100% - 40px);
   padding: 20px;
+  height:calc(100% - 40px);
   box-sizing: content-box;
   .el-table__header-wrapper{
     border-radius: 8px;
